kubernetes_charts/argo-cd/ingress/qa_us3/ingress.us3.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - cd.us3.qaexotel.in
    secretName: argocd-ingress
  rules:
  - host: cd.us3.qaexotel.in
    http:
      paths:
      - path: /
        backend:
          serviceName: argocd-server
          servicePort: 443
      - path: /dex/callback
        backend:
          serviceName: argocd-dex-server
          servicePort: 5556
      - path: /api/metrics
        backend:
          serviceName: argocd-metrics
          servicePort: 8082
